# hal

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .unibeautifyrc.yml  Brewfile  Brewfile.lock.json  CHANGELOG.md  CMakeLists.txt  CURRENT_VERSION  CURRENT_VERSION.in  Changelog  Dockerfile  FindHal.cmake  LICENSE  LICENSE.header  README.md  build_and_test.sh  buttons.jsonc  dataflow.py  docker-compose.yml  hal.pc.in  hal_screenshot.html  install_dependencies.sh  order_alu_pins.py  propagate_bitorder.py  requirements.txt  smt_check.py  update_alu_pins.py  z3_utils.cpp
app/: CMakeLists.txt  main.cpp
documentation/: CMakeLists.txt  Doxyfile.in  DoxyfileNew  DoxyfileOld  HAL_Clion_code_style.xml  Pybind_special_cases.docx  coding_style.txt  hal_screenshot.html  index.html
documentation/decorator (sphinx backup)/: bdd.rst  gate_decorator.rst  gate_decorator_bdd.rst  gate_decorator_lut.rst  gate_decorator_type_system.rst
documentation/gui-functional-specification-document/: gui-functional-specification-document.tex
documentation/sphinx_doc/: base_type.rst  bdd.rst  boolean_function.rst  boolean_function_decorator.rst  boolean_function_net_decorator.rst  conf.py.in  core_utils.rst  data_container.rst  endpoint.rst  gate.rst  gate_decorator.rst  gate_decorator_bdd.rst  gate_decorator_lut.rst  gate_decorator_system.rst  gate_library.rst  gate_library_manager.rst  gate_pin.rst  gate_pin_group.rst  gate_type.rst  gate_type_component.rst  gate_type_lut.rst  gate_type_property.rst  gate_type_sequential.rst  graph_algorithm.rst  grouping.rst  gui_plugin_interface.rst  hal_gui.rst  hal_py.rst  hdl_writer_dispatcher.rst  i_base.rst  i_gui.rst  index.rst  module.rst  module_pin.rst  net.rst  netlist.rst  netlist_factory.rst  netlist_manipulation_decorator.rst  netlist_modification_decorator.rst  netlist_serializer.rst  (+12 more)
documentation/tagfiles/: qtcore.tags  qtgui.tags  qtwidgets.tags
plugins/: .gitignore  CMakeLists.txt
plugins/bitorder_propagation/: CMakeLists.txt
plugins/bitwuzla_utils/: CMakeLists.txt  gui_smt_benchmarks.py  guid_minimal_test.py  smt_benchmarks.py
plugins/boolean_influence/: CMakeLists.txt  test.py  test_multiple.py
plugins/clock_tree_extractor/: CMakeLists.txt
plugins/cross_probing/: CMakeLists.txt
plugins/dataflow/: README.md  configuration.py  control.py  utils.py
plugins/dataflow_analysis/: CMakeLists.txt  README.md
plugins/dot_viewer/: CMakeLists.txt
plugins/edif_parser/: CMakeLists.txt
plugins/example_gate_library/: CMakeLists.txt
plugins/extend_context/: CMakeLists.txt
plugins/gate_libraries/: CMakeLists.txt  scan_ff.py
plugins/gate_library_specific_utils/: CMakeLists.txt  test_plugin.py
plugins/genlib_writer/: CMakeLists.txt
plugins/gexf_writer/: CMakeLists.txt
plugins/graph_algorithm/: CMakeLists.txt
plugins/gui/: CMakeLists.txt
plugins/gui_extension_demo/: CMakeLists.txt
plugins/hawkeye/: .gitignore  CMakeLists.txt  README.md
plugins/helix/: CMakeLists.txt  helix.proto
plugins/hgl_parser/: CMakeLists.txt
plugins/hgl_writer/: CMakeLists.txt
plugins/igraph/: CMakeLists.txt
plugins/liberty_parser/: CMakeLists.txt
plugins/logic_evaluator/: CMakeLists.txt
plugins/machine_learning/: CMakeLists.txt  requirements.txt
plugins/module_identification/: CMakeLists.txt  README.md
plugins/netlist_modifier/: CMakeLists.txt
plugins/netlist_preprocessing/: CMakeLists.txt
plugins/netlist_simulator/: CMakeLists.txt  readme.md
plugins/netlist_simulator_study/: CMakeLists.txt
plugins/perf_test/: CMakeLists.txt
plugins/python_shell/: CMakeLists.txt
plugins/quine_mccluskey/: CMakeLists.txt
plugins/resynthesis/: CMakeLists.txt
plugins/sequential_symbolic_execution/: CMakeLists.txt
plugins/simulator/: .gitignore  CMakeLists.txt
plugins/smt_utils/: CMakeLists.txt
plugins/solve_fsm/: CMakeLists.txt  test_plugin.py
plugins/test_boolean_function/: CMakeLists.txt
plugins/vcd_viewer/: CMakeLists.txt
plugins/verilog_parser/: CMakeLists.txt
plugins/verilog_writer/: CMakeLists.txt
plugins/vhdl_parser/: CMakeLists.txt
plugins/vhdl_verilog_parsers/: CMakeLists.txt
plugins/vhdl_verilog_writers/: CMakeLists.txt
plugins/xilinx_toolbox/: CMakeLists.txt
plugins/z3_utils/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  hal_file_manager.cpp  interface_base.cpp  interface_factory.cpp  library_loader.cpp  log.cpp  plugin_interface_base.cpp  plugin_manager.cpp  program_arguments.cpp  program_options.cpp  token_stream.cpp  utils.cpp
src/gate_decorator_system/: gate_decorator.cpp  gate_decorator_system.cpp
src/gui/: CMakeLists.txt  factory_gui.cpp  gui_utility.cpp  plugin_gui.cpp
src/hdl_parser/: hdl_parser.cpp  hdl_parser_dispatcher.cpp  hdl_parser_dot.cpp  hdl_parser_verilog.cpp  hdl_parser_verilog_old.cpp  hdl_parser_vhdl.cpp  hdl_parser_vhdl_old.cpp  token_stream.cpp
src/hdl_writer/: hdl_writer.cpp  hdl_writer_verilog.cpp  hdl_writer_vhdl.cpp
src/netlist/: CMakeLists.txt  boolean_function.cpp  data_container.cpp  endpoint.cpp  event_handler.cpp  gate.cpp  grouping.cpp  module.cpp  net.cpp  netlist.cpp  netlist_factory.cpp  netlist_internal_manager.cpp  netlist_utils.cpp  project_manager.cpp  project_serializer.cpp
src/plugin_system/: CMakeLists.txt  gui_extension_interface.cpp  library_loader.cpp  plugin_interface_base.cpp  plugin_manager.cpp  runtime_library.cpp
src/python-binding/: CMakeLists.txt  factory_python_shell.cpp  plugin_python_shell.cpp  python_definitions.cpp
src/python_binding/: CMakeLists.txt  plugin_python_shell.cpp  python_definitions.cpp
src/python_bindings/: CMakeLists.txt  python_bindings.cpp
src/utilities/: CMakeLists.txt  finite_set.cpp  hal_file_manager.cpp  json_write_document.cpp  library_loader.cpp  log.cpp  program_arguments.cpp  program_options.cpp  progress_printer.cpp  project_directory.cpp  project_filelist.cpp  project_manager.cpp  project_serializer.cpp  utils.cpp
tests/: CMakeLists.txt  googletest-CMakeLists.txt.in  test_def.h
tests/basic_tests/: CMakeLists.txt  basic_check.cpp
(+15385 files in other folders)
